tests/codegen/fail/union/trait_non_object_variant.stderr
error[E0277]: the trait bound `Test: GraphQLObject<__S>` is not satisfied
  --> fail/union/trait_non_object_variant.rs:11:28
   |
11 |     fn a(&self) -> Option<&Test>;
   |                            ^^^^ the trait `GraphQLObject<__S>` is not implemented for `Test`
   |
   = help: the following other types implement trait `GraphQLObject<S>`:
             <Box<T> as GraphQLObject<S>>
             <juniper::meta::Field<S> as GraphQLObject<S>>
             <Argument<S> as GraphQLObject<S>>
             <EnumValue as GraphQLObject<__S>>
             <SchemaType<S> as GraphQLObject<S>>
             <juniper::schema::model::TypeType<'a, S> as GraphQLObject<S>>
             <juniper::schema::model::DirectiveType<S> as GraphQLObject<S>>
             <Arc<T> as GraphQLObject<S>>
             <&T as GraphQLObject<S>>
